--- a/resume/resume03/index.html
+++ b/resume/resume03/index.html
@@ -95,38 +95,92 @@
                 </a>                
             </footer>
         </div>
-        <a class="button" href="#">下载 PDF 简历</a>
-        <p>
+        <p class="download"><a class="button" href="#">下载 PDF 简历</a></p>
+        <p class="selfIntroduction">
             资深前端工程师
-            <br> 技能：
+            <br> 技能：前端开发，Rails 开发，Node.js 开发
         </p>
     </main>
-    <section>
+    <section class="skills">
         <h2>技能</h2>
-        <ol>
-            <li>HTML 5 &amp; CSS 3</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>Vue</li>
-            <li>React</li>
-            <li>HTTP</li>
+        <ol class="clearfix">
+            <li>
+                <h3>
+                    HTML 5 &amp; CSS 3
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width:80%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    JavaScript
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width:70%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>jQuery</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width:60%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>Vue</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width:50%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>React</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width:40%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTTP</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width:30%"></div>
+                </div>
+            </li>
         </ol>
     </section>
-    <section>
+    <section class="portfolio">
         <h2>作品集</h2>
-        <nav>
-            <ol>
-                <li>所有</li>
-                <li>框架</li>
-                <li>无框架</li>
+        <nav class="">
+            <ol class="clearfix">
+                <li id="button_1">所有</li>
+                <li id="button_2">框架</li>
+                <li id="button_3">原生JS&ampCSS</li>
             </ol>
+            <div id="button" class="bar state-1">
+                <div class="barSlider">
+                </div>
+            </div>
         </nav>
-        <div class="jobs">
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
+        <script>
+            button_1.onclick= function(){
+                button.className = 'bar state-1'
+            }
+            button_2.onclick= function(){
+                button.className = "bar state-2"
+            }
+            button_3.onclick= function(){
+                button.className= 'bar state-3'
+            }
+        </script>
+        <div class="jobs clearfix">
+            <div class="big">
+                <img src="./img/1.jpg" alt="作品1">
+            </div>
+            <div class="small">
+                <img src="./img/2.jpg" alt="作品2">
+            </div>
+            <div class="small2">
+                <img src="./img/3.jpg" alt="作品3">
+            </div>
         </div>
     </section>
 </body>
-
 </html>
