--- a/JSONP/index.html
+++ b/JSONP/index.html
@@ -16,13 +16,15 @@
         let script = document.createElement('script');
         let functionName = 'gf' + parseInt(Math.random() * 100000, 10);
         //给调用函数创建一个随机的函数名
-        script.src = 'http://jack.com:8002/pay?callback=' + functionName;
-        //jack.com为响应网站的域名，8002为响应网站的端口号
-        window[callback] = function (result) { //定义函数
+        window[functionName] = function (result) { //定义函数
             if (result === 'success') {
                 amount.innerText = amount.innerText - 1;
             }
         }
+        script.src = 'http://jack.com:8002/pay?callback=' + functionName;
+        //jack.com为响应网站的域名，8002为响应网站的端口号
+        document.body.appendChild(script)
+        //script放在页面里浏览器才会发起请求
         script.onload = function (e) {
             e.currentTarget.remove();//执行结束删除script标签
             delete window[callback]; //执行结束删除函数
