--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <button id="myButton">点我</button>
+    <form action="https://www.baidu.com" method="get">
+        <input type="password" name="password">
+        <input type="submit" value="提交">
+    </form>
     <script src="./main.js"></script>
 </body>
 
