使用纯jQuery和promise简化代码

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>测试同源政策</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>测试同源政策</title>
 </head>
-
 <body>
-    <button id="myButton">点我</button>
-    <form action="https://www.baidu.com" method="get">
-        <input type="password" name="password">
-        <input type="submit" value="提交">
-    </form>
-    <script src="./main.js"></script>
+  <button id="myButton">点我</button>
+  <!-- <form action="https://www.baidu.com" method="get">
+   <input type="password" name="password">
+   <input type="submit" value="提交">
+  </form> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./main.js"></script>
 </body>
-
 </html>
